force-app/main/default/objects/lleads__Prospect__c/lleads__Prospect__c.object-meta.xml
<CustomObject>
    <description>Custom Contact object used in Propeller Leads package</description>
    <label>Prospect</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>