force-app/main/default/objects/lleads__Prospect__c/fields/lleads__AssistantName__c.field-meta.xml
<CustomField>
    <fullName>lleads__AssistantName__c</fullName>
    <label>Assistant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>