force-app/main/default/objects/lleads__Prospect__c/fields/lleads__AssistantPhone__c.field-meta.xml
<CustomField>
    <fullName>lleads__AssistantPhone__c</fullName>
    <label>Asst. Phone</label>
    <type>Phone</type>
</CustomField>