force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Birthdate__c.field-meta.xml
<CustomField>
    <fullName>lleads__Birthdate__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>