force-app/main/default/objects/lleads__Prospect__c/fields/lleads__City__c.field-meta.xml
<CustomField>
    <fullName>lleads__City__c</fullName>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>