force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Company__c.field-meta.xml
<CustomField>
    <fullName>lleads__Company__c</fullName>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>