force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Country__c.field-meta.xml
<CustomField>
    <fullName>lleads__Country__c</fullName>
    <label>Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>