force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Description__c.field-meta.xml
<CustomField>
    <fullName>lleads__Description__c</fullName>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>