force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>lleads__Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>