force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Email__c.field-meta.xml
<CustomField>
    <fullName>lleads__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>