force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Fax__c.field-meta.xml
<CustomField>
    <fullName>lleads__Fax__c</fullName>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>