force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Fax_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>lleads__Fax_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fax Opt Out</label>
    <type>Checkbox</type>
</CustomField>