force-app/main/default/objects/lleads__Prospect__c/fields/lleads__First_Name__c.field-meta.xml
<CustomField>
    <fullName>lleads__First_Name__c</fullName>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>