force-app/main/default/objects/lleads__Prospect__c/fields/lleads__HasOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>lleads__HasOptedOutOfEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>