force-app/main/default/objects/lleads__Prospect__c/fields/lleads__HasOptedOutOfFax__c.field-meta.xml
<CustomField>
    <fullName>lleads__HasOptedOutOfFax__c</fullName>
    <label>Deprecated</label>
    <type>Phone</type>
</CustomField>