force-app/main/default/objects/lleads__Prospect__c/fields/lleads__HomePhone__c.field-meta.xml
<CustomField>
    <fullName>lleads__HomePhone__c</fullName>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>