force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Jigsaw__c.field-meta.xml
<CustomField>
    <fullName>lleads__Jigsaw__c</fullName>
    <label>Data.com Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>