force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>lleads__Last_Name__c</fullName>
    <label>Last Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>