force-app/main/default/objects/lleads__Prospect__c/fields/lleads__LastCURequestDate__c.field-meta.xml
<CustomField>
    <fullName>lleads__LastCURequestDate__c</fullName>
    <label>Last Stay-in-Touch Request Date</label>
    <type>DateTime</type>
</CustomField>