force-app/main/default/objects/lleads__Prospect__c/fields/lleads__LastCUUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>lleads__LastCUUpdateDate__c</fullName>
    <label>Last Stay-in-Touch Save Date</label>
    <type>DateTime</type>
</CustomField>