force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Lead__c.field-meta.xml
<CustomField>
    <fullName>lleads__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Prospect</relationshipName>
    <type>Lookup</type>
</CustomField>