force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Make_Primary__c.field-meta.xml
<CustomField>
    <fullName>lleads__Make_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make Primary</label>
    <type>Checkbox</type>
</CustomField>