force-app/main/default/objects/lleads__Prospect__c/fields/lleads__MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>lleads__MobilePhone__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>