force-app/main/default/objects/lleads__Prospect__c/fields/lleads__OtherPhone__c.field-meta.xml
<CustomField>
    <fullName>lleads__OtherPhone__c</fullName>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>