force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Phone__c.field-meta.xml
<CustomField>
    <fullName>lleads__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>