force-app/main/default/objects/lleads__Prospect__c/fields/lleads__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>lleads__PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>