force-app/main/default/objects/lleads__Prospect__c/fields/lleads__ReportsTo__c.field-meta.xml
<CustomField>
    <fullName>lleads__ReportsTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reports To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Prospect</relationshipName>
    <type>Lookup</type>
</CustomField>