force-app/main/default/objects/lleads__Prospect__c/fields/lleads__State__c.field-meta.xml
<CustomField>
    <fullName>lleads__State__c</fullName>
    <label>State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>