force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Street__c.field-meta.xml
<CustomField>
    <fullName>lleads__Street__c</fullName>
    <label>Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>