force-app/main/default/objects/lleads__Prospect__c/fields/lleads__Title__c.field-meta.xml
<CustomField>
    <fullName>lleads__Title__c</fullName>
    <label>Title</label>
    <length>128</length>
    <type>Text</type>
</CustomField>