force-app/main/default/objects/lleads__Prospect__c/listViews/lleads__All.listView-meta.xml
<ListView>
    <fullName>lleads__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>